app/styles/app.css
/* ... */
.featured-slider .truncate {
  @apply text-base;
}

@media screen and (max-width: 370px) {
  .font-mobile {
    font-size: 20px !important;
    line-height: 1.75rem !important;
  }
}

.filteration-ul li:first-child button {
  @apply rounded-tl rounded-bl;
}
.filteration-ul li:last-child button {
  @apply rounded-tr rounded-br;
}


.your-gym .slick-dots li button:before,
.your-gym .slick-dots li button {
  width: 10px;
  height: 10px;
  padding: 2px;
  line-height: 12px;
}

.your-gym .slick-dots li.slick-active button {
  color: #7a392d !important;
}

.margin-0-auto{
  margin: 0 auto;
}

@media screen and (max-width: 540px) {
  .bg-herb-roasted-chicken-breast{
    display: none;
  }
}

.custom-select {
  @apply !bg-none;
}

.custom-select::-ms-expand {
  @apply !hidden;
}

.mobile-cart .plan-picker-freq-div {
  @apply !px-0;
}

#reamaze-widget {
  @apply sm:!visible !invisible;
}

